# xsar_slc

./: README.md  processing.py  pyproject.toml  requirements_doc.txt  setup.py  tools.py
.github/workflows/: agrouaze_jekyll.yml  agrouaze_manual.yml  pages.yml  publish.yml
auxdata/: S1A_IRs_IW1_HH.nc  S1A_IRs_IW1_HV.nc  S1A_IRs_IW1_VH.nc  S1A_IRs_IW1_VV.nc  S1A_IRs_IW2_VH.nc  S1A_IRs_IW2_VV.nc  S1A_IRs_IW3_HH.nc  S1A_IRs_IW3_HV.nc  S1A_IRs_IW3_VH.nc  S1A_IRs_IW3_VV.nc  S1B_IRs_IW1_HH.nc  S1B_IRs_IW1_HV.nc  S1B_IRs_IW1_VH.nc  S1B_IRs_IW1_VV.nc  S1B_IRs_IW2_HH.nc  S1B_IRs_IW2_HV.nc  S1B_IRs_IW2_VH.nc  S1B_IRs_IW2_VV.nc  S1B_IRs_IW3_VH.nc  S1B_IRs_IW3_VV.nc
ci/requirements/: docs.yaml  environment.yaml
docs/: ATBD.rst  ATBD_L1BSLC.rst  ATBD_L1BSLC.tex  basic_api.rst  conf.py  crossspectra.rst  cutoff.rst  index.rst  installing.rst  normalizedvariance.rst  sigma0.rst
docs/examples/: default_impulseResponse_files_IW.ipynb  example_IW_compute_and_correct_from_impulse_response.ipynb  example_WV_compute_and_correct_from_impulse_response.ipynb  intro.py  xspec_IW_intra_and_inter_burst.ipynb  xspec_WV_example.ipynb
docs/figures/: index
scripts/: L1B_xspectra_IW_SLC_IFR.py  L1B_xspectra_WV_SLC_IFR.py  get_RI_file.py  get_config_infos.py
src/xsarslc/: __init__.py  processing.py
xsarslc/: __init__.py  burst.py  config.yml  get_config_infos.py  get_test_files.py  interface.py  processing.py  tools.py
xsarslc/processing/: HR_tiles.py  deramping.py  impulseResponse.py  interburst.py  intraburst.py  xspectra.py
xsarslc/scripts/: L1B_xspectra_EW_SLC_IFR.py  L1B_xspectra_IW_SLC_IFR.py  L1B_xspectra_WV_SLC_IFR.py
