[project]
name = "xsar_slc"
requires-python = ">= 3.9"
license = {text = "MIT"}
dependencies = [
    "xarray",
    "numpy",
    "shapely",
    "xrft",
    "xarray-datatree",
    "cartopy",
    "xsar"
]
dynamic = ["version"]

[build-system]
requires = ["setuptools", "setuptools-scm"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
#packages = ["xsar_slc.srcipts.L1B_xspectra_IW_SLC_IFR.py"]

[tool.setuptools_scm]
fallback_version = "999"

[tool.isort]
profile = "black"
skip_gitignore = true
float_to_top = true
default_section = "THIRDPARTY"