[project]
name = "xsarslc"
requires-python = ">= 3.9"
license = {text = "MIT"}
classifiers = [
    "Programming Language :: Python :: 3",
]
dependencies = [
    "xarray",
    "numpy",
    "netCDF4",
    "shapely",
    "xrft",
    "xarray-datatree",
    "cartopy",
    "importlib_resources",
    'tqdm'
]
dynamic = ["version"]
[build-system]
requires = ["setuptools>=64.0", "setuptools-scm"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
packages = ["xsarslc"]

[tool.setuptools_scm]
fallback_version = "999"

[tool.isort]
profile = "black"
skip_gitignore = true
float_to_top = true
default_section = "THIRDPARTY"
known_first_party = "xsarslc"